--- a/vars/ocp4-vars-vmware-upi-installer.yaml
+++ b/vars/ocp4-vars-vmware-upi-installer.yaml
@@ -37,6 +37,8 @@ cluster_name: ""
 
 bootstrap_ignition_config_url: "http://{{ ansible_default_ipv4.address }}:{{ httpd_port }}/bootstrap.ign"
 
+# Proxy must be in the form: http://<address>:<port>
+# Please remember to add vcenter address within noproxy variable if required
 proxy_env:
   http_proxy: ''
   https_proxy: ''
