--- a/playbooks/ocp4-playbook-cluster-create.yaml
+++ b/playbooks/ocp4-playbook-cluster-create.yaml
@@ -14,7 +14,7 @@
 
     - name: include task for client setup
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-client-setup.yaml"
-      tags: ocp4-client-setup.yaml
+      tags: ocp4-client-setup
 
     - name: include task for yum proxy setup
       include_tasks: "{{ playbook_dir }}/../tasks/yum_set_proxy.yaml"
@@ -31,6 +31,7 @@
     - name: Include vars for ignition files
       include_vars:
         file: "{{ playbook_dir }}/../vars/ocp4-vars-dynamic.yaml"
+      tags: vmware
 
     - name: include create task vms for bootstrap node
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-nodes-create.yaml"
