--- a/playbooks/ocp4-playbook-erase-vms.yaml
+++ b/playbooks/ocp4-playbook-erase-vms.yaml
@@ -10,11 +10,13 @@
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-nodes-erase.yaml"
       vars:
         nodes: "{{ bootstrap }}"
+      tags: skip
 
     - name: include erase task vms for masters node
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-nodes-erase.yaml"
       vars:
         nodes: "{{ masters }}"
+      tags: skip
 
     - name: include erase task vms for workers node
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-nodes-erase.yaml"
