--- a/vars/ocp4-vars-vmware-upi-installer.yaml
+++ b/vars/ocp4-vars-vmware-upi-installer.yaml
@@ -53,7 +53,7 @@ ssh_key: ''
 bootstrap_ignition_config_url: "http://{{ ansible_default_ipv4.address }}:{{ httpd_port }}/bootstrap.ign"
 ################## Parameters used for install-config.yaml file - END
 
-#######################  Variables below for DNS & DHCP server setup - BEGIN
+#######################  Variables for DNS & DHCP server setup - BEGIN
 machineCIDR_netmask: "255.255.255.0"
 machineCIDR_first_ip: "{{ openshift.machineCIDR | regex_replace('^([0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3})/[0-9]{1,2}', '\\1') }}"
 machineCIDR_first_three_octects: "{{ machineCIDR_first_ip | regex_replace('^([0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3})\\.[0-9]{1,3}$', '\\1') }}"
