Added variable to specify vsphere VM folder

--- a/vars/ocp4-vars-vmware-upi-installer.yaml
+++ b/vars/ocp4-vars-vmware-upi-installer.yaml
@@ -27,6 +27,7 @@ vcenter:
   cluster: ""
   datastore: ""
   network: ""
+  folder: ""
 # Variable required if multiple distributed portgroups exists:
 #  dvswitch_name: ""
 ova_template_name: ''
