--- a/tasks/ocp4-httpd-ignition-provide.yaml
+++ b/tasks/ocp4-httpd-ignition-provide.yaml
@@ -6,7 +6,7 @@
 - name: listen on port {{ httpd_port }}
   replace:
     path: /etc/httpd/conf/httpd.conf
-    regexp: '^(Listen) 80$'
+    regexp: '^(Listen) [0-9]*$'
     replace: '\1 {{ httpd_port }}'
 
 - name: restart httpd server
