--- a/playbooks/ocp4-playbook-erase-vms.yaml
+++ b/playbooks/ocp4-playbook-erase-vms.yaml
@@ -11,15 +11,18 @@
       vars:
         nodes: "{{ bootstrap }}"
       tags: skip
+      when: bootstrap is defined
 
     - name: include erase task vms for masters node
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-nodes-erase.yaml"
       vars:
         nodes: "{{ masters }}"
       tags: skip
+      when: masters is defined
 
     - name: include erase task vms for workers node
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-nodes-erase.yaml"
       vars:
         nodes: "{{ workers }}"
+      when: workers is defined
 
