--- a/playbooks/ocp4-playbook-poweron-vms.yaml
+++ b/playbooks/ocp4-playbook-poweron-vms.yaml
@@ -12,14 +12,17 @@
       vars:
         nodes: "{{ bootstrap }}"
       tags: skip
+      when: bootstrap is defined
 
     - name: include poweron task vms for masters node
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-nodes-poweron.yaml"
       vars:
         nodes: "{{ masters }}"
       tags: skip
+      when: masters is defined
 
     - name: include poweron task vms for workers node
       include_tasks: "{{ playbook_dir }}/../tasks/ocp4-nodes-poweron.yaml"
       vars:
         nodes: "{{ workers }}"
+      when: workers is defined
