--- a/tasks/ocp4-client-setup.yaml
+++ b/tasks/ocp4-client-setup.yaml
@@ -6,7 +6,7 @@
     - "{{ client_linux }}"
     - "{{ install_linux }}"
   environment: "{{ proxy_env }}"
-  tags: [ create_manifest ]
+  tags: [ download_client, create_manifest ]
 
 - name: Extract openshift clients
   unarchive:
@@ -15,4 +15,4 @@
   loop:
     - "{{ client_linux }}"
     - "{{ install_linux }}"
-  tags: [ create_manifest ]
+  tags: [ download_client, create_manifest ]
