--- a/tasks/ocp4-nodes-create.yaml
+++ b/tasks/ocp4-nodes-create.yaml
@@ -6,7 +6,7 @@
     datacenter: "{{ vcenter.datacenter }}"
     cluster: "{{ vcenter.cluster }}"
     validate_certs: no
-    folder: "/{{ vcenter.datacenter }}/vm/{{ cluster_name }}"
+    folder: "{{ vcenter.folder }}"
     name: "{{ item.name }}"
     state: poweredoff
     template: "{{ ova_template_name }}"
@@ -46,7 +46,7 @@
     datacenter: "{{ vcenter.datacenter }}"
     cluster: "{{ vcenter.cluster }}"
     validate_certs: no
-    folder: "/{{ vcenter.datacenter }}/vm/{{ cluster_name }}"
+    folder: "{{ vcenter.folder }}"
     name: "{{ item.name }}"
     gather_network_info: false
     networks:
@@ -69,7 +69,7 @@
     datacenter: "{{ vcenter.datacenter }}"
     cluster: "{{ vcenter.cluster }}"
     validate_certs: no
-    folder: "/{{ vcenter.datacenter }}/vm/{{ cluster_name }}"
+    folder: "{{ vcenter.folder }}"
     name: "{{ item.name }}"
     state: poweredoff
     template: "{{ ova_template_name }}"
